--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -42,6 +42,7 @@
     "blockies-ts": "^1.0.0",
     "immer": "^10.0.2",
     "lodash.memoize": "^4.1.2",
+    "lodash.isequal": "^4.1.2",
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -53,6 +54,7 @@
     "@mui/material": "^5.13.6",
     "@superfluid-finance/ethereum-contracts": "^1.7.1",
     "@types/lodash.memoize": "^4.1.7",
+    "@types/lodash.isequal": "^4.1.7",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@wagmi/cli": "^1.3.0",
