--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -47,7 +47,7 @@
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "7.44.3",
+    "react-hook-form": "^7.45.1",
     "use-immer": "^0.9.0",
     "zod": "^3.21.4"
   },
