--- a/examples/b2b-service-demo/package.json
+++ b/examples/b2b-service-demo/package.json
@@ -19,6 +19,7 @@
     "next": "13.4.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-use-intercom": "^5.1.4",
     "typescript": "5.1.6",
     "viem": "^1.2.5",
     "wagmi": "^1.3.3",
