--- a/apps/widget-builder/.env.example
+++ b/apps/widget-builder/.env.example
@@ -1,6 +1,7 @@
 NEXT_PUBLIC_GOOGLE_FONTS_API_KEY=
 NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=
 NEXT_PUBLIC_EXPORT_BASE_URL=
+NEXT_PUBLIC_INTERCOM_SURVEY_ID=
 
 # Don't keep these along for too long
 NEXT_PUBLIC_PINATA_API_KEY=
