--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -49,13 +49,14 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "7.44.3",
     "use-immer": "^0.9.0",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "zod-validation-error": "^1.3.1"
   },
   "devDependencies": {
     "@mui/material": "^5.14.0",
     "@superfluid-finance/ethereum-contracts": "^1.7.1",
-    "@types/lodash.memoize": "^4.1.7",
     "@types/lodash.isequal": "^4.1.7",
+    "@types/lodash.memoize": "^4.1.7",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@wagmi/cli": "^1.3.0",
