--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -39,6 +39,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/lab": "5.0.0-alpha.136",
     "@mui/utils": "^5.13.6",
+    "@superfluid-finance/metadata": "^1.1.8",
     "@superfluid-finance/tokenlist": "^1.2.0",
     "blockies-ts": "^1.0.0",
     "immer": "^10.0.2",
@@ -49,8 +50,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "7.44.3",
     "use-immer": "^0.9.0",
-    "zod": "^3.21.4",
-    "zod-validation-error": "^1.3.1"
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@mui/material": "^5.14.0",
