--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -48,7 +48,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "7.45.1",
     "use-immer": "^0.9.0",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "zod-validation-error": "^1.3.1"
   },
   "devDependencies": {
     "@mui/material": "^5.14.0",
