--- a/apps/widget-builder/package.json
+++ b/apps/widget-builder/package.json
@@ -27,12 +27,13 @@
     "@web3modal/ethereum": "^2.7.0",
     "@web3modal/react": "^2.7.0",
     "clsx": "^1.2.1",
+    "monaco-editor": "^0.40.0",
     "mui-color-input": "^1.1.0",
-    "next": "^13.4.9",
+    "next": "^13.4.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "7.45.1",
-    "viem": "^1.2.14",
+    "viem": "^1.2.15",
     "wagmi": "^1.3.8",
     "zod": "^3.21.4",
     "zod-to-json-schema": "^3.21.4"
@@ -40,9 +41,9 @@
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
     "@types/node": "^20.4.2",
-    "@types/react": "^18.2.14",
+    "@types/react": "^18.2.15",
     "eslint": "^8.44.0",
-    "eslint-config-next": "^13.4.9",
+    "eslint-config-next": "^13.4.10",
     "typescript": "^5.1.6"
   }
 }
