--- a/apps/hosted-widget/package.json
+++ b/apps/hosted-widget/package.json
@@ -35,6 +35,7 @@
     "@types/node": "^20.4.2",
     "@types/react": "^18.2.15",
     "@types/react-blockies": "^1.4.1",
+    "@wagmi/cli": "^1.3.0",
     "eslint": "^8.44.0",
     "eslint-config-next": "^13.4.10",
     "typescript": "^5.1.6"
