B2B service demo - Added demo mode

--- a/examples/donation-demo/package.json
+++ b/examples/donation-demo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "donation-demo",
+  "name": "@superfluid-finance/donation-demo",
   "version": "0.1.0",
   "private": true,
   "scripts": {
