--- a/examples/b2b-service-demo/package.json
+++ b/examples/b2b-service-demo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "b2b-service-demo",
+  "name": "@superfluid-finance/b2b-service-demo",
   "version": "0.1.1",
   "private": true,
   "scripts": {
