--- a/examples/b2b-service-demo/package.json
+++ b/examples/b2b-service-demo/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sentry/nextjs": "^7.59.2",
     "@superfluid-finance/tokenlist": "^1.3.0",
     "@superfluid-finance/widget": "workspace:*",
     "@types/node": "20.4.2",
