--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@superfluid-finance/widget",
-  "version": "0.0.9",
+  "name": "superfluid-widget",
+  "version": "0.0.18",
   "private": false,
   "license": "MIT",
   "type": "module",
