removed transpilePackages from all next.configs as they are not necessary anymore

--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "superfluid-widget",
+  "name": "@superfluid-finance/widget",
   "version": "0.0.18",
   "private": false,
   "license": "MIT",
