--- a/turbo.json
+++ b/turbo.json
@@ -31,7 +31,8 @@
       "env": [
         "NEXT_PUBLIC_SENTRY_DSN",
         "NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID",
-        "NEXT_PUBLIC_SEGMENT_WRITE_KEY"
+        "NEXT_PUBLIC_SEGMENT_WRITE_KEY",
+        "ROOT_REDIRECT_URL"
       ]
     },
     "@superfluid-finance/b2b-service-demo#build": {
