--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint": "^8.44.0",
     "eslint-config-custom": "workspace:*",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
     "prettier": "^3.0.0",
