ipfs hash moved for demo into env

--- a/turbo.json
+++ b/turbo.json
@@ -33,6 +33,7 @@
         "NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID",
         "NEXT_PUBLIC_SEGMENT_WRITE_KEY",
         "NEXT_PUBLIC_THE_THING",
+        "NEXT_PUBLIC_DEMO_IPFS",
         "ROOT_REDIRECT_URL"
       ]
     },
