Hosted Widget: Demo Mode (#94)
* added hosted widget demo mode, route wagmi config

* resolve pnpm lock conflict

* fix pnpmlock

* demo only supports polygon mumbai

* autodelete flow

* removed unnecessary stuff

* try disconnecting the demowallet if we are on it because of the /demo route

* remove DemoWalletDisconnect

* added random receiver in hosted widget as well

* fix demo page no ipfs hash required

* ipfs hash moved for demo into env

* fix walletdisplay and ToS PP

* keep the styling of the widget passed if there is an ipfs hash

* fix TokenAutocomplete duplicate keys if multiple payment options are present with the same token

* keep everything from the loaded widget except the paymentOptions

--- a/turbo.json
+++ b/turbo.json
@@ -32,22 +32,19 @@
         "NEXT_PUBLIC_SENTRY_DSN",
         "NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID",
         "NEXT_PUBLIC_SEGMENT_WRITE_KEY",
+        "NEXT_PUBLIC_THE_THING",
+        "NEXT_PUBLIC_DEMO_IPFS",
         "ROOT_REDIRECT_URL"
       ]
     },
     "@superfluid-finance/b2b-service-demo#build": {
       "dependsOn": ["^build"],
-      "outputs": [".next/**", "!.next/cache/**"],
-      "env": ["NEXT_PUBLIC_THE_THING"]
-    },
-    "@superfluid-finance/donation-demo#build": {
-      "dependsOn": ["^build"],
-      "outputs": [".next/**", "!.next/cache/**"],
-      "env": ["NEXT_PUBLIC_THE_THING"]
+      "outputs": [".next/**", "!.next/cache/**"]
     },
     "test": {
       "dependsOn": ["build"],
       "env": [
+        "NEXT_PUBLIC_THE_THING",
         "CI",
         "METAMASK_VERSION",
         "HEADLESS_MODE",
