--- a/apps/hosted-widget/package.json
+++ b/apps/hosted-widget/package.json
@@ -25,6 +25,7 @@
     "clsx": "^1.2.1",
     "next": "^13.4.10",
     "react": "^18.2.0",
+    "react-blockies": "^1.4.1",
     "react-dom": "^18.2.0",
     "viem": "^1.2.15",
     "wagmi": "^1.3.8",
@@ -33,6 +34,7 @@
   "devDependencies": {
     "@types/node": "^20.4.2",
     "@types/react": "^18.2.15",
+    "@types/react-blockies": "^1.4.1",
     "eslint": "^8.44.0",
     "eslint-config-next": "^13.4.10",
     "typescript": "^5.1.6"
