separate pnpm dev for examples; don't include all projects by default

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "clean:next": "rimraf -g \"./**/.next\"",
     "clean:node-modules": "rimraf -g \"**/node_modules\"",
     "clean:dist": "rimraf -g \"./**/dist\"",
-    "dev": "turbo run dev",
-    "dev:main": "turbo run dev --filter=!./examples/*",
+    "dev": "turbo run dev --filter=!./examples/*",
+    "dev:examples": "turbo run dev --filter='./packages/widget' --filter='./examples/*'",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "lint": "turbo run lint",
     "prepare": "husky install",
