--- a/examples/b2b-service-demo/package.json
+++ b/examples/b2b-service-demo/package.json
@@ -15,6 +15,11 @@
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "@web3auth/base": "^6.1.7",
+    "@web3auth/ethereum-provider": "^6.1.7",
+    "@web3auth/metamask-adapter": "^6.1.7",
+    "@web3auth/modal": "^6.1.7",
+    "@web3auth/web3auth-wagmi-connector": "^4.0.1",
     "@web3modal/ethereum": "^2.7.0",
     "@web3modal/react": "^2.7.0",
     "next": "13.4.10",
