--- a/turbo.json
+++ b/turbo.json
@@ -39,7 +39,11 @@
     },
     "@superfluid-finance/b2b-service-demo#build": {
       "dependsOn": ["^build"],
-      "outputs": [".next/**", "!.next/cache/**"]
+      "outputs": [".next/**", "!.next/cache/**"],
+      "env": [
+        "NEXT_PUBLIC_WEB3_AUTH_CLIENT_ID",
+        "NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID"
+      ]
     },
     "test": {
       "dependsOn": ["build"],
