--- a/package.json
+++ b/package.json
@@ -40,12 +40,5 @@
     "turbo": "^1.10.12",
     "typescript": "^5.1.6"
   },
-  "packageManager": "pnpm@8.6.1",
-  "pnpm": {
-    "overrides": {
-      "next": "13.4.9",
-      "react-hook-form": "7.44.3",
-      "eslint-plugin-react-hooks": "4.6.0"
-    }
-  }
+  "packageManager": "pnpm@8.6.1"
 }
