--- a/package.json
+++ b/package.json
@@ -40,5 +40,10 @@
     "turbo": "^1.10.12",
     "typescript": "^5.1.6"
   },
-  "packageManager": "pnpm@8.6.1"
+  "packageManager": "pnpm@8.6.1",
+  "pnpm": {
+    "overrides": {
+      "react-hook-form": "7.44.3"
+    }
+  }
 }
