--- a/examples/widget-vite-react-web3modal/package.json
+++ b/examples/widget-vite-react-web3modal/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview --host"
   },
   "dependencies": {
-    "@superfluid-finance/tokenlist": "^1.3.2",
+    "@superfluid-finance/tokenlist": "^2.0.0",
     "@superfluid-finance/widget": "workspace:*",
     "@web3modal/ethereum": "^2.7.1",
     "@web3modal/react": "^2.7.1",
@@ -27,7 +27,7 @@
     "@typescript-eslint/parser": "^6.2.1",
     "@vitejs/plugin-react": "^4.0.4",
     "eslint": "^8.46.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-hooks": "^5.0.0-canary-493f72b0a-20230727",
     "eslint-plugin-react-refresh": "^0.4.3",
     "typescript": "^5.1.6",
     "vite": "^4.4.8"
