--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   "packageManager": "pnpm@8.6.1",
   "pnpm": {
     "overrides": {
-      "react-hook-form": "7.44.3"
+      "react-hook-form": "~7.44.3"
     }
   }
 }
