--- a/examples/gated-community-demo/package.json
+++ b/examples/gated-community-demo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gated-community-demo",
+  "name": "@superfluid-finance/gated-community-demo",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,19 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sentry/nextjs": "^7.61.0",
     "@superfluid-finance/tokenlist": "^1.3.2",
     "@superfluid-finance/widget": "workspace:*",
     "@types/node": "20.4.5",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
-    "@web3modal/ethereum": "^2.7.0",
-    "@web3modal/react": "^2.7.0",
+    "@web3modal/ethereum": "^2.7.1",
+    "@web3modal/react": "^2.7.1",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.6",
-    "viem": "^1.2.15",
-    "wagmi": "^1.3.8",
+    "viem": "^1.5.0",
+    "wagmi": "^1.3.9",
     "zod": "^3.21.4"
   }
 }
