--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -31,7 +31,8 @@
     "dev": "tsc -w -p ./tsconfig.json",
     "typedoc": "typedoc --out docs src/index.ts",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "wagmi": "wagmi generate"
+    "wagmi": "wagmi generate",
+    "test": "vitest"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -57,15 +58,19 @@
   "devDependencies": {
     "@mui/material": "^5.14.3",
     "@superfluid-finance/ethereum-contracts": "^1.7.1",
+    "@testing-library/react": "^14.0.0",
     "@types/lodash.isequal": "^4.5.6",
     "@types/lodash.memoize": "^4.1.7",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.0.4",
     "@wagmi/cli": "^1.3.0",
+    "jsdom": "^22.1.0",
     "tsconfig": "workspace:*",
     "typedoc": "^0.24.8",
     "typescript": "^5.1.6",
     "viem": "^1.5.3",
+    "vitest": "^0.34.1",
     "wagmi": "^1.3.9"
   },
   "peerDependencies": {
