--- a/packages/widget/tsconfig.json
+++ b/packages/widget/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "tsconfig/base.json",
-  "include": ["./src/**/*"],
+  "include": ["./src/**/*", "./test/**/*"],
   "exclude": ["node_modules"],
   "compilerOptions": {
     "jsx": "react-jsx",
