--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -28,7 +28,7 @@
   ],
   "scripts": {
     "build": "cp ../../README.md . && tsc -p ./tsconfig.build.json",
-    "dev": "tsc -w -p ./tsconfig.json",
+    "dev": "tsc -w -p ./tsconfig.build.json",
     "typedoc": "typedoc --out docs src/index.ts",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "wagmi": "wagmi generate",
