--- a/apps/widget-builder/package.json
+++ b/apps/widget-builder/package.json
@@ -27,6 +27,7 @@
     "@web3modal/ethereum": "^2.7.1",
     "@web3modal/react": "^2.7.1",
     "clsx": "^2.0.0",
+    "lodash": "^4.17.21",
     "monaco-editor": "^0.41.0",
     "mui-color-input": "^2.0.0",
     "next": "13.4.13",
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
+    "@types/lodash": "^4.14.197",
     "@types/node": "^20.5.0",
     "@types/react": "^18.2.19",
     "eslint": "^8.47.0",
