fix the source pattern

--- a/apps/hosted-widget/vercel.json
+++ b/apps/hosted-widget/vercel.json
@@ -1,10 +1,11 @@
 {
   "rewrites": [
-    { "source": "/:hash", "destination": "/[hash].html" }
+    { "source": "/:hash", "destination": "/[hash].html" },
+    { "source": "/demo/:hash", "destination": "/demo/[[...hash]].html" }
   ],
   "headers": [
     {
-      "source": "/*",
+      "source": "/(.*)",
       "headers": [
         { "key": "Access-Control-Allow-Origin", "value": "https://app.safe.global" }
       ]
