--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "lint": "turbo run lint",
     "prepare": "husky install",
-    "sort-package-jsons": "npx sort-package-json \"**/package.json\" \"!**/node_modules/**\" --check"
+    "sort-package-jsons": "npx sort-package-json \"**/package.json\" \"!**/node_modules/**\" --check",
+    "tsc": "turbo run tsc"
   },
   "lint-staged": {
     "*.{js,ts,tsx}": [
