--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
   "packageManager": "pnpm@8.6.1",
   "pnpm": {
     "overrides": {
-      "react-hook-form": "~7.44.3"
+      "react-hook-form": "~7.44.3",
+      "eslint-plugin-react-hooks": "5.0.0-canary-7118f5dd7-20230705"
     }
   }
 }
