--- a/package.json
+++ b/package.json
@@ -26,11 +26,9 @@
       "eslint --fix"
     ]
   },
-  "dependencies": {
-    "@changesets/cli": "^2.26.2",
-    "npm-run-all": "^4.1.5"
-  },
   "devDependencies": {
+    "@changesets/cli": "^2.26.2",
+    "npm-run-all": "^4.1.5",
     "eslint": "^8.47.0",
     "eslint-config-custom": "workspace:*",
     "eslint-plugin-simple-import-sort": "^10.0.0",
