--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -47,6 +47,7 @@
     "immer": "^10.0.2",
     "lodash.isequal": "^4.5.0",
     "lodash.memoize": "^4.1.2",
+    "lodash.uniqwith": "^4.5.0",
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -61,6 +62,7 @@
     "@testing-library/react": "^14.0.0",
     "@types/lodash.isequal": "^4.5.6",
     "@types/lodash.memoize": "^4.1.7",
+    "@types/lodash.uniqwith": "^4.5.7",
     "@types/react": "^18.2.19",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.4",
