--- a/apps/hosted-widget/vercel.json
+++ b/apps/hosted-widget/vercel.json
@@ -1,7 +1,9 @@
 {
   "rewrites": [
     { "source": "/:hash", "destination": "/[hash]" },
+    { "source": "/:hash/manifest.json", "destination": "/manifest.json" },
     { "source": "/demo/:hash", "destination": "/demo/[[...hash]]" }
+    { "source": "/demo/:hash/manifest.json", "destination": "/manifest.json" }
   ],
   "headers": [
     {
