restore index page and move the new 'load by ipfs hash' page to different route

--- a/apps/hosted-widget/vercel.json
+++ b/apps/hosted-widget/vercel.json
@@ -2,8 +2,9 @@
   "rewrites": [
     { "source": "/:hash", "destination": "/[hash]" },
     { "source": "/:hash/manifest.json", "destination": "/manifest.json" },
-    { "source": "/demo/:hash", "destination": "/demo/[[...hash]]" }
-    { "source": "/demo/:hash/manifest.json", "destination": "/manifest.json" }
+    { "source": "/demo/:hash", "destination": "/demo/[[...hash]]" },
+    { "source": "/demo/:hash/manifest.json", "destination": "/manifest.json" },
+    { "source": "/load/manifest.json", "destination": "/manifest.json" }
   ],
   "headers": [
     {
