--- a/apps/hosted-widget/public/manifest.json
+++ b/apps/hosted-widget/public/manifest.json
@@ -1,5 +1,5 @@
 {
   "name": "Superfluid Checkout Widget",
   "description": "Pay with ongoing real-time payments, powered by Superfluid Protocol.",
-  "iconPath": "icon-120-green.png"
+  "iconPath": "/icon-120-green.png"
 }
