update ts again

--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
   "pnpm": {
     "overrides": {
       "react-hook-form": "~7.44.3",
-      "eslint-plugin-react-hooks": "5.0.0-canary-7118f5dd7-20230705",
-      "typescript": "~5.1.6"
+      "eslint-plugin-react-hooks": "5.0.0-canary-7118f5dd7-20230705"
     }
   }
 }
