use existentialNFTCloneFactory address from metadata

--- a/apps/widget-builder/package.json
+++ b/apps/widget-builder/package.json
@@ -23,6 +23,7 @@
     "@pinata/sdk": "^2.1.0",
     "@segment/analytics-next": "^1.53.4",
     "@sentry/nextjs": "^7.64.0",
+    "@superfluid-finance/metadata": "^1.1.13",
     "@superfluid-finance/widget": "workspace:*",
     "@web3modal/ethereum": "^2.7.1",
     "@web3modal/react": "^2.7.1",
