use env mnemonic, and throwaway wallet as a fallback

--- a/apps/widget-builder/.env.example
+++ b/apps/widget-builder/.env.example
@@ -6,3 +6,5 @@ NEXT_PUBLIC_INTERCOM_SURVEY_ID=
 # Don't keep these along for too long
 NEXT_PUBLIC_PINATA_API_KEY=
 NEXT_PUBLIC_PINATA_API_SECRET=
+
+DEPLOYER_MNEMONIC=
