support privatekey optionally

--- a/turbo.json
+++ b/turbo.json
@@ -27,7 +27,8 @@
         "NEXT_PUBLIC_PINATA_API_KEY",
         "NEXT_PUBLIC_PINATA_API_SECRET",
         "NEXT_PUBLIC_INTERCOM_SURVEY_ID",
-        "DEPLOYER_MNEMONIC"
+        "DEPLOYER_MNEMONIC",
+        "DEPLOYER_PRIVATE_KEY"
       ]
     },
     "@superfluid-finance/hosted-widget#build": {
