--- a/apps/widget-builder/.env.example
+++ b/apps/widget-builder/.env.example
@@ -9,3 +9,6 @@ NEXT_PUBLIC_PINATA_API_SECRET=
 
 DEPLOYER_MNEMONIC=
 DEPLOYER_PRIVATE_KEY=
+
+NEXT_PUBLIC_RECAPTCHA_SITE_KEY=
+RECAPTCHA_SECRET_KEY=
