--- a/apps/widget-builder/package.json
+++ b/apps/widget-builder/package.json
@@ -29,12 +29,15 @@
     "@web3modal/react": "^2.7.1",
     "clsx": "^2.0.0",
     "lodash": "^4.17.21",
+    "lru-cache": "^10.0.1",
     "monaco-editor": "^0.41.0",
     "mui-color-input": "^2.0.0",
     "next": "13.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "~7.44.3",
+    "request-ip": "^3.3.0",
     "stream-gating": "^0.0.15",
     "viem": "^1.7.0",
     "wagmi": "^1.3.10",
@@ -46,6 +49,8 @@
     "@types/lodash": "^4.14.197",
     "@types/node": "^20.5.6",
     "@types/react": "^18.2.21",
+    "@types/react-google-recaptcha": "^2.1.5",
+    "@types/request-ip": "^0.0.38",
     "eslint": "^8.47.0",
     "eslint-config-next": "^13.4.18",
     "typescript": "^5.2.2"
