--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "pnpm": {
     "overrides": {
       "react-hook-form": "~7.44.3",
+      "@superfluid-finance/ethereum-contracts": "1.7.2",
       "eslint-plugin-react-hooks": "5.0.0-canary-7118f5dd7-20230705"
     }
   }
