remove deployer mnemonic

--- a/apps/widget-builder/.env.example
+++ b/apps/widget-builder/.env.example
@@ -7,8 +7,7 @@ NEXT_PUBLIC_INTERCOM_SURVEY_ID=
 NEXT_PUBLIC_PINATA_API_KEY=
 NEXT_PUBLIC_PINATA_API_SECRET=
 
-DEPLOYER_MNEMONIC=
 DEPLOYER_PRIVATE_KEY=
 
-NEXT_PUBLIC_RECAPTCHA_SITE_KEY=6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI
-RECAPTCHA_SECRET_KEY=6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe
+NEXT_PUBLIC_RECAPTCHA_SITE_KEY=
+RECAPTCHA_SECRET_KEY=
