--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,6 +18,10 @@ jobs:
       run:
         working-directory: tests
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        shard: [1/5, 2/5, 3/5, 4/5 , 5/5]
+
     steps:
       - uses: actions/checkout@v3
 
@@ -52,12 +56,13 @@ jobs:
 
         # https://playwright.dev/docs/next/ci#running-headed  
       - name: Run Playwright tests
-        run: xvfb-run pnpm playwright test
+        run: xvfb-run pnpm playwright test --shard ${{ matrix.shard }}
         env:
           BASE_URL: ${{ env.BASE_URL }}
           WIDGET_WALLET_PUBLIC_KEY: "0x7c5de59A1b31e3D00279A825Cb95fAEDb09eA9FD"
           CURRENTS_PROJECT_ID: 3TQU8o
           CURRENTS_RECORD_KEY: ${{ secrets.CURRENTS_RECORD_KEY }}
           CURRENTS_CI_BUILD_ID: ${{ github.repository }}-${{ github.run_id }}-${{ github.run_attempt}}
+          C
           WIDGET_WALLET_PRIVATE_KEY: ${{ secrets.WIDGET_WALLET_PRIVATE_KEY}}
           CI: true
