add DEPLOYMENT_GAS_LIMIT to turbo

--- a/apps/widget-builder/.env.example
+++ b/apps/widget-builder/.env.example
@@ -11,3 +11,4 @@ DEPLOYER_PRIVATE_KEY=
 
 NEXT_PUBLIC_RECAPTCHA_SITE_KEY=6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI
 RECAPTCHA_SECRET_KEY=6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe
+DEPLOYMENT_GAS_LIMIT=1_000_000
