--- a/turbo.json
+++ b/turbo.json
@@ -29,7 +29,8 @@
         "NEXT_PUBLIC_INTERCOM_SURVEY_ID",
         "NEXT_PUBLIC_RECAPTCHA_SITE_KEY",
         "RECAPTCHA_SECRET_KEY",
-        "DEPLOYER_PRIVATE_KEY"
+        "DEPLOYER_PRIVATE_KEY",
+        "DEPLOYMENT_GAS_LIMIT"
       ]
     },
     "@superfluid-finance/hosted-widget#build": {
