Feature: ENFT UI (#141)
Feature: Existential NFT UI, integration with NFT API, and ExistentialNFTCloneFactory.

Co-authored-by: Kaspar Kallas <kaspar@superfluid.finance>
Co-authored-by: elvijsTDL <elvijs.dzirkals@testdevlab.com>

--- a/apps/widget-builder/package.json
+++ b/apps/widget-builder/package.json
@@ -27,12 +27,16 @@
     "@web3modal/ethereum": "^2.7.1",
     "@web3modal/react": "^2.7.1",
     "clsx": "^2.0.0",
+    "lodash": "^4.17.21",
+    "lru-cache": "^10.0.1",
     "monaco-editor": "^0.43.0",
     "mui-color-input": "^2.0.0",
     "next": "13.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "~7.46.1",
+    "request-ip": "^3.3.0",
     "viem": "^1.10.9",
     "wagmi": "^1.4.1",
     "zod": "^3.22.1",
@@ -40,8 +44,12 @@
   },
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
+    "@types/lodash": "^4.14.197",
     "@types/node": "^20.6.0",
     "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "@types/react-google-recaptcha": "^2.1.5",
+    "@types/request-ip": "^0.0.38",
     "eslint": "^8.49.0",
     "eslint-config-next": "^13.4.18",
     "typescript": "^5.2.2"
