--- a/turbo.json
+++ b/turbo.json
@@ -26,7 +26,11 @@
         "NEXT_PUBLIC_SEGMENT_WRITE_KEY",
         "NEXT_PUBLIC_PINATA_API_KEY",
         "NEXT_PUBLIC_PINATA_API_SECRET",
-        "NEXT_PUBLIC_INTERCOM_SURVEY_ID"
+        "NEXT_PUBLIC_INTERCOM_SURVEY_ID",
+        "NEXT_PUBLIC_RECAPTCHA_SITE_KEY",
+        "RECAPTCHA_SECRET_KEY",
+        "DEPLOYER_PRIVATE_KEY",
+        "DEPLOYMENT_GAS_LIMIT"
       ]
     },
     "@superfluid-finance/hosted-widget#build": {
