--- a/apps/widget-builder/.env.example
+++ b/apps/widget-builder/.env.example
@@ -6,3 +6,9 @@ NEXT_PUBLIC_INTERCOM_SURVEY_ID=
 # Don't keep these along for too long
 NEXT_PUBLIC_PINATA_API_KEY=
 NEXT_PUBLIC_PINATA_API_SECRET=
+
+DEPLOYER_PRIVATE_KEY=
+
+NEXT_PUBLIC_RECAPTCHA_SITE_KEY=6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI
+RECAPTCHA_SECRET_KEY=6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe
+DEPLOYMENT_GAS_LIMIT=1_000_000
