--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -75,6 +75,7 @@
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.11",
     "react-hook-form": "~7.46.1",
     "use-immer": "^0.9.0",
     "zod": "^3.22.1",
