add all the .js suffixes
* fix lint errors

--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -91,12 +91,13 @@
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.4",
-    "@wagmi/cli": "^1.5.0",
+    "@wagmi/cli": "^1.5.1",
     "jsdom": "^22.1.0",
     "tsconfig": "workspace:*",
+    "tsup": "^7.2.0",
     "typedoc": "^0.25.1",
     "typescript": "^5.2.2",
-    "viem": "^1.11.0",
+    "viem": "^1.12.2",
     "vitest": "^0.34.4",
     "wagmi": "^1.4.2"
   },
