--- a/packages/widget/tsconfig.json
+++ b/packages/widget/tsconfig.json
@@ -9,6 +9,7 @@
     "target": "ES2020",
     "outDir": "./dist",
     "declaration": true,
-    "resolveJsonModule": true
+    "declarationMap": true,
+    "resolveJsonModule": true,
   }
 }
