--- a/packages/widget/tsconfig.build.json
+++ b/packages/widget/tsconfig.build.json
@@ -1,4 +1,8 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["node_modules", "test"]
+  "exclude": ["node_modules", "test"],
+  "compilerOptions": {
+    "declarationMap": true,
+    "resolveJsonModule": false
+  }
 }
