--- a/packages/widget/tsconfig.json
+++ b/packages/widget/tsconfig.json
@@ -5,11 +5,11 @@
   "compilerOptions": {
     "jsx": "react-jsx",
     "lib": ["ESNext", "DOM"],
-    "module": "ESNext",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "target": "ES2020",
     "outDir": "./dist",
     "declaration": true,
-    "declarationMap": true,
     "resolveJsonModule": true,
   }
 }
