--- a/examples/b2b-service-demo/package.json
+++ b/examples/b2b-service-demo/package.json
@@ -10,20 +10,22 @@
     "tsc": "tsc --noEmit"
   },
   "dependencies": {
-    "@sentry/nextjs": "^7.68.0",
+    "@sentry/nextjs": "^7.72.0",
     "@superfluid-finance/widget": "workspace:*",
-    "@types/node": "20.6.0",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
     "@web3modal/ethereum": "^2.7.1",
     "@web3modal/react": "^2.7.1",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-use-intercom": "^5.1.4",
-    "typescript": "5.2.2",
     "viem": "^1.12.2",
     "wagmi": "^1.4.2",
     "zod": "^3.22.1"
+  },
+  "devDependencies": {
+    "@types/node": "20.7.0",
+    "@types/react": "18.2.23",
+    "@types/react-dom": "18.2.8",
+    "typescript": "5.2.2"
   }
 }
