--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -57,6 +57,7 @@
     "test": "vitest",
     "tsc": "tsc -p ./tsconfig.build.json --noEmit"
   },
+  "sideEffects": false,
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -72,7 +73,7 @@
     "lodash.isequal": "^4.5.0",
     "lodash.memoize": "^4.1.2",
     "lodash.uniqwith": "^4.5.0",
-    "nanoid": "^5.0.1",
+    "nanoid": "^4.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
@@ -96,8 +97,8 @@
     "tsconfig": "workspace:*",
     "typedoc": "^0.25.1",
     "typescript": "^5.2.2",
-    "viem": "^1.12.2",
-    "vitest": "^0.34.5",
+    "viem": "^1.14.0",
+    "vitest": "^0.34.6",
     "wagmi": "^1.4.2"
   },
   "peerDependencies": {
