enable choosing modify flow rate behaviour from add, set or ensure
* always attempt idempotency with upfront transfers
* don't allow the user to transaction screen when nothing to do with the stream

--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -57,6 +57,7 @@
     "test": "vitest",
     "tsc": "tsc -p ./tsconfig.build.json --noEmit"
   },
+  "sideEffects": false,
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
