add script to build tests as NodeNext output with ESM modules by default

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,25 +7,20 @@
   "features": {
     "ghcr.io/devcontainers-contrib/features/pnpm:2": {}
   },
-
   "hostRequirements": {
     "cpus": 4,
     "memory": "8gb",
     "storage": "32gb"
   },
-
   // Features to add to the dev container. More info: https://containers.dev/features.
   // "features": {},
-
   // Use 'forwardPorts' to make a list of ports inside the container available locally.
   // "forwardPorts": [],
-
+  // "onCreateCommand": "pnpm dlx playwright install-deps",
   // Use 'postCreateCommand' to run commands after the container is created.
   "postCreateCommand": "pnpm install && pnpm build"
-
   // Configure tool-specific properties.
   // "customizations": {},
-
   // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
   // "remoteUser": "root"
 }
