--- a/packages/widget/tsconfig.json
+++ b/packages/widget/tsconfig.json
@@ -10,6 +10,6 @@
     "target": "ES2020",
     "outDir": "./dist",
     "declaration": true,
-    "resolveJsonModule": true,
+    "resolveJsonModule": true
   }
 }
