--- a/.github/workflows/pr-pkg.yml
+++ b/.github/workflows/pr-pkg.yml
@@ -1,7 +1,8 @@
 name: PR Package Release
 
 on:
-  workflow_dispatch:
+  pull_request:
+    types: [synchronize, opened, reopened]
 defaults:
   run:
     working-directory: ./packages/widget
