no git checks with pnpm publisj

--- a/.github/workflows/pr-pkg.yml
+++ b/.github/workflows/pr-pkg.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Set Version
         run: pnpm version prerelease --preid=pr-${{ env.git_hash }}
       - name: Publish
-        run: pnpm publish -r
+        run: pnpm publish -r --no-git-checks
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPMJS_TOKEN }}
