--- a/.github/workflows/pr-pkg.yml
+++ b/.github/workflows/pr-pkg.yml
@@ -29,7 +29,7 @@ jobs:
         id: changeset_snapshot
         uses: changesets/action@v1
         with:
-          publish: pnpm changeset release --tag dev
+          publish: pnpm changeset publish --tag dev
           version: pnpm changeset version --snapshot
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
