--- a/.github/workflows/snapshot-release.yml
+++ b/.github/workflows/snapshot-release.yml
@@ -8,7 +8,7 @@ concurrency:
 
 jobs:
   changesets:
-    name: Changesets
+    name: Changesets Snapshot
     runs-on: ubuntu-latest
     timeout-minutes: 5
 
@@ -29,7 +29,7 @@ jobs:
         run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPMJS_TOKEN }}" > .npmrc
 
       - name: Changeset version
-        run: pnpm changeset version --snapshot
+        run: pnpm changeset version --snapshot dev
 
       - name: Changeset publish
         run: pnpm changeset publish --tag dev
