--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,13 +2,12 @@ name: Playwright Tests
 
 on:
   deployment_status:
-  workflow_dispatch:  
-    inputs: 
+  workflow_dispatch:
+    inputs:
       environment:
-        description: 'Url to run tests against'
+        description: "Url to run tests against"
         type: string
         required: true
-
 
 jobs:
   test:
@@ -21,7 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        shard: [1/2, 2/2] # Test execution times will not improve with more shards, if using 3 or 4 it just instantly passes one of the "shards" and runs the tests as if 2 shards were used
+        shard: [1/10, 2/10, 3/10, 4/10, 5/10, 6/10, 7/10, 8/10, 9/10, 10/10]
 
     steps:
       - uses: actions/checkout@v3
@@ -45,17 +44,17 @@ jobs:
         run: |
           sudo apt-get install --no-install-recommends -y \
           fluxbox \
-          xvfb          
-          
+          xvfb
+
       - name: Set url the tests should run on
         run: |
           if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
             echo "BASE_URL=${{ github.event.inputs.environment }}" >> $GITHUB_ENV
           elif [[ "${{ github.event_name }}" == "deployment_status" ]]; then
             echo "BASE_URL=${{ github.event.deployment_status.environment_url }}" >> $GITHUB_ENV
-          fi        
+          fi
 
-        # https://playwright.dev/docs/next/ci#running-headed  
+        # https://playwright.dev/docs/next/ci#running-headed
       - name: Run Playwright tests
         run: xvfb-run pnpm playwright test --shard ${{ matrix.shard }}
         env:
