adding docusaurus - first commit

--- a/examples/gated-community-demo/package.json
+++ b/examples/gated-community-demo/package.json
@@ -10,6 +10,9 @@
     "tsc": "tsc --noEmit"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.12",
     "@sentry/nextjs": "^7.72.0",
     "@superfluid-finance/widget": "workspace:*",
     "@web3modal/ethereum": "^2.7.1",
