--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -52,6 +52,7 @@
     "build": "cp ../../README.md . && tsc -p ./tsconfig.build.json",
     "dev": "tsc -w -p ./tsconfig.build.json",
     "typedoc": "typedoc --out docs src/index.ts --tsconfig ./tsconfig.build.json",
+    "typedoc:json": "typedoc --json api.json src/index.ts --tsconfig ./tsconfig.build.json",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "wagmi": "wagmi generate",
     "test": "vitest",
