--- a/docs/package.json
+++ b/docs/package.json
@@ -13,8 +13,10 @@
     "next": "^13.0.6",
     "nextra": "latest",
     "nextra-theme-docs": "latest",
+    "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remark-admonitions": "^1.2.1",
     "typedoc-nextra": "^0.1.6"
   },
   "devDependencies": {
