--- a/apps/widget-builder/package.json
+++ b/apps/widget-builder/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
+    "dev": "next dev --port 3000",
     "lint": "next lint",
     "post-update": "echo \"codesandbox preview only, need an update\" && yarn upgrade --latest",
     "start": "next start",
@@ -49,7 +49,7 @@
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
     "@types/react-google-recaptcha": "^2.1.7",
-    "@types/request-ip": "^0.0.39",
+    "@types/request-ip": "^0.0.40",
     "eslint": "^8.52.0",
     "eslint-config-next": "^13.5.6",
     "typescript": "^5.2.2"
