add multiple pages and an index page

--- a/docs/package.json
+++ b/docs/package.json
@@ -10,7 +10,10 @@
   },
   "license": "MIT",
   "dependencies": {
-    "next": "^13.0.6",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.16",
+    "next": "^13.5.6",
     "nextra": "latest",
     "nextra-theme-docs": "latest",
     "prettier": "^3.0.3",
